--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@hexlet/code",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "[![Actions Status](https://github.com/ajsen/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/ajsen/frontend-project-46/actions)",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "gendiff": "gendiff.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,5 +17,8 @@
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1"
+  },
+  "dependencies": {
+    "commander": "^11.0.0"
   }
 }
