--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^29.6.4"
   },
   "dependencies": {
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "lodash": "^4.17.21"
   }
 }
