--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
   },
   "extends": "airbnb-base",
   "parserOptions": {
-    "ecmaVersion": "latest",
+    "ecmaVersion": 2020,
     "sourceType": "module"
   },
   "rules": {
@@ -22,6 +22,15 @@
       "error",
       {
         "js": "always"
+      }
+    ],
+    "no-underscore-dangle": [
+      2,
+      {
+        "allow": [
+          "__filename",
+          "__dirname"
+        ]
       }
     ]
   }
