--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@hexlet/code",
   "version": "0.0.1",
   "description": "[![Actions Status](https://github.com/ajsen/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/ajsen/frontend-project-46/actions)",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "bin": {
     "gendiff": "./bin/gendiff.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "keywords": [],
   "author": "Ajsen Martynov <ajsmartmin@gmail.com>",
@@ -17,7 +17,7 @@
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "jest": "^29.6.4"
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "commander": "^11.0.0",
