--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
         run: make lint
       - name: test
         run: make test
-      - name: coverage
+      - name: test coverage
         run: make coverage
       - name: publish test coverage
         uses: paambaati/codeclimate-action@v5.0.0
