--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
       - name: test
         run: make test
       - name: test coverage
-        run: make coverage
+        run: make test-coverage
       - name: publish test coverage
         uses: paambaati/codeclimate-action@v5.0.0
         env:
